--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/assets/images"]
 	path = src/assets/images
-	url = https://https://github.com/Vin0210/my-portfolio
+	url = https://github.com/Vin0210/my-portfolio.git
